# knee

./: .gitignore  CMakeLists.txt  README.md
example/client/: CMakeLists.txt
example/client/src/: main.cpp  parse_arguments.cpp  parse_arguments.hpp
example/common/: CMakeLists.txt
example/common/include/common/: parse_argument.hpp
example/common/src/common/: parse_argument.cpp
example/server/: CMakeLists.txt
example/server/src/: main.cpp  parse_arguments.cpp  parse_arguments.hpp
include/locket/: socket.hpp
src/locket/: socket.cpp
